--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -15,7 +15,7 @@ general {
 order += "tztime holder__hey_man"
 order += "ethernet _first_"
 order += "disk /"
-order += "load"
+order += "cpu_temperature 0"
 order += "memory"
 order += "volume master"
 order += "tztime local"
@@ -29,8 +29,9 @@ ethernet _first_ {
         format_down = "E: down"
 }
 
-disk "/" {
-        format = "%avail"
+cpu_temperature 0 {
+        format = "CPU: %degrees °C"
+        path = "/sys/class/hwmon/hwmon2/temp1_input"
 }
 
 load {
@@ -38,9 +39,7 @@ load {
 }
 
 memory {
-        format = "%used | %available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format = "Mem: %used"
 }
 
 tztime local {
